[package]
name = "hello_rust_world"
version = "0.1.0"
authors = ["KeigoMega <31650689+KeigoMega@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.51", features = ["buildtime-bindgen"]}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
